--- a/nginx.conf
+++ b/nginx.conf
@@ -80,7 +80,7 @@ server {
         gzip_static on;
     }
     location /repoconfig/ {
-        root /data/PKUMirror/;
+        root /data/web/;
     }
 
     location /monitor/ {
@@ -90,21 +90,17 @@ server {
 	proxy_pass http://localhost:3001/;
     }
     location = /robots.txt {
-        root /data/PKUMirror/config/;
+        root /data/web/repoconfig/;
     }
     location = /google53f21eaac539b6a8.html {
-        root /data/PKUMirror/config/;
+        root /data/web/repoconfig/;
     }
     location = /baidu_verify_code-E12Mj7SzYn.html {
-        root /data/PKUMirror/config/;
+        root /data/web/repoconfig/;
     }
 
     location /monitor_device/ {
 	proxy_pass http://127.0.0.1:19999/;
-    }
-
-    location /nginx_status/ {
-        stub_status;
     }
 
 # Web router
