--- a/rsyncd/rsyncd.conf
+++ b/rsyncd/rsyncd.conf
@@ -1,7 +1,7 @@
 #maximum allowed connections
 max connections = 10
 #where to log
-log file = /var/log/rsync.log
+log file = /data/log/rsync.log
 timeout = 300
 port 873
 
