Fix some issues.

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,10 @@ server {
         autoindex on;
 	autoindex_format json;
     }
+    location /manjaro/ {
+        autoindex on;
+	autoindex_format json;
+    }
     location /epel/ {
         autoindex on;
 	autoindex_format json;
@@ -44,7 +48,6 @@ server {
     location /opensuse/ {
         autoindex on;
         autoindex_format json;
-	alias /datatmp/opensuse/;
     }
     location /anaconda/ {
         autoindex on;
@@ -53,12 +56,8 @@ server {
     location /pypi/ {
         autoindex on;
 	autoindex_format json;
+	index something.html;
         alias /data/repos/pypi/web/;
-    }
-    location /tmp/ {
-        autoindex on;
-        autoindex_format json;
-        alias /datahdd/repos/;
     }
 }
 
@@ -69,10 +68,18 @@ server {
     listen       [::]:443 ssl;
     server_name  mirrors.pku.edu.cn;
 
+    # return 301 https://$server_name$request_uri;
+
     error_log    /var/log/nginx/repos_test_error.log;
     access_log   /var/log/nginx/repos_test_access.log;
 
     root /data/repos/;
+
+    location /phpmyadmin/ {
+        # proxy_pass http://localhost:3002/;
+	root /data/;
+	index index.php index.html;
+    }
 
     # XXX: Is it better to put those into /repos?
     location /static/ {
@@ -148,6 +155,15 @@ server {
 	root /data/web/dist/;
 	rewrite ^ /index.html break;
     }
+    location /pypi/ {
+	alias /data/repos/pypi/web/;
+        if (!-e $request_filename) {
+            root /data/web/dist/;
+            error_page 404 /index.html;
+            return 404;
+        }
+        try_files $uri @frontend;
+    }
     location / {
 	if (!-e $request_filename) {
 	    root /data/web/dist/;
@@ -164,6 +180,14 @@ server {
     location @frontend {
 	root /data/web/dist;
 	rewrite ^ /index.html break;
+    }
+    # PHP
+    location ~ \.php$ {
+        fastcgi_pass   unix:/var/run/php-fpm/www.sock;
+	fastcgi_index  index.php;
+	fastcgi_param  SCRIPT_FILENAME /data/$fastcgi_script_name;
+	include        fastcgi_params;
+	fastcgi_param   SCRIPT_NAME $fastcgi_script_name;
     }
 
     # Managed by Certbot
