Fix some issues. (pypi)

--- a/nginx.conf
+++ b/nginx.conf
@@ -56,7 +56,6 @@ server {
     location /pypi/ {
         autoindex on;
 	autoindex_format json;
-	index something.html;
         alias /data/repos/pypi/web/;
     }
 }
@@ -162,7 +161,7 @@ server {
             error_page 404 /index.html;
             return 404;
         }
-        try_files $uri @frontend;
+        try_files $uri $uri/index.html @frontend;
     }
     location / {
 	if (!-e $request_filename) {
