Add nginx config for some repositories

--- a/nginx.conf
+++ b/nginx.conf
@@ -58,6 +58,22 @@ server {
 	autoindex_format json;
         alias /data/repos/pypi/web/;
     }
+    location /gentoo/ {
+        autoindex on;
+        autoindex_format json;
+    }
+    location /debian/ {
+        autoindex on;
+        autoindex_format json;
+    }
+    location /debian-cd/ {
+        autoindex on;
+        autoindex_format json;
+    }
+    location /huggingface/ {
+        autoindex on;
+        autoindex_format json;
+    }
 }
 
 server {
