Fix some issues. Add new proxy

--- a/nginx.conf
+++ b/nginx.conf
@@ -105,9 +105,14 @@ server {
         root /data/web/;
     }
 
-    location /monitor/ {
-        proxy_pass http://localhost:3000/;
+    location ~ /monitor/(start|stop|log) {
+    	try_files @error @error;
     }
+
+    location /monitor/ {
+        proxy_pass http://localhost:3030/;
+    }
+
     location /files/ {
 	proxy_pass http://localhost:3001/;
     }
