--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,11 @@
 server {
     return 403;
 }
-
+map $http_origin $status_cors_host {
+	default 0;
+	"~https://mirrors.pku.edu.cn" https://mirrors.pku.edu.cn;
+	"~http://mirrors.pku.edu.cn" http://mirrors.pku.edu.cn;
+}
 server {
     listen	3001;
     root /data/repos/;
@@ -111,6 +115,9 @@ server {
 
     location /monitor/ {
         proxy_pass http://localhost:3030/;
+	add_header Access-Control-Allow-Origin *;
+	add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+	add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
     }
 
     location /files/ {
@@ -127,7 +134,17 @@ server {
     }
 
     location /monitor_device/ {
-	proxy_pass http://127.0.0.1:19999/;
+	location /monitor_device/api/ {
+	    proxy_pass http://127.0.0.1:19999/api/;
+	    add_header Access-Control-Allow-Origin $status_cors_host;
+	    add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+	    add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+	}
+	location /monitor_device/ {
+	    root /data/web/dist/;
+            error_page 404 /index.html;
+            return 404;
+	}
     }
 
 # Web router
