Update cd image names

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
         autoindex on;
 	autoindex_format json;
     }
-    location /ubuntu-cdimages/ {
+    location /ubuntu-cdimage/ {
         autoindex on;
 	autoindex_format json;
     }
@@ -45,7 +45,7 @@ server {
         autoindex on;
 	autoindex_format json;
     }
-    location /linuxmint-cdimages/ {
+    location /linuxmint-cd/ {
         autoindex on;
 	autoindex_format json;
     }
