Add some repos in nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ map $http_origin $status_cors_host {
 	default 0;
 	"~https://mirrors.pku.edu.cn" https://mirrors.pku.edu.cn;
 	"~http://mirrors.pku.edu.cn" http://mirrors.pku.edu.cn;
+	"~https://mirrorz.org" https://mirrorz.org;
 }
 server {
     listen	3001;
@@ -74,6 +75,22 @@ server {
         autoindex on;
         autoindex_format json;
     }
+    location /debian-security/ {
+        autoindex on;
+        autoindex_format json;
+    }
+    location /debian-multimedia/ {
+        autoindex on;
+        autoindex_format json;
+    }
+    location /debian-nonfree/ {
+        autoindex on;
+        autoindex_format json;
+    }
+    location /raspbian/ {
+        autoindex on;
+        autoindex_format json;
+    }
     location /huggingface/ {
         autoindex on;
         autoindex_format json;
@@ -115,7 +132,7 @@ server {
 
     location /monitor/ {
         proxy_pass http://localhost:3030/;
-	add_header Access-Control-Allow-Origin *;
+	add_header Access-Control-Allow-Origin $status_cors_host;
 	add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
 	add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
     }
@@ -135,10 +152,11 @@ server {
 
     location /monitor_device/ {
 	location /monitor_device/api/ {
+	    proxy_set_header X-Real-IP $remote_addr;
 	    proxy_pass http://127.0.0.1:19999/api/;
-	    add_header Access-Control-Allow-Origin $status_cors_host;
-	    add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
-	    add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+	    # add_header Access-Control-Allow-Origin $status_cors_host;
+	    # add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+	    # add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
 	}
 	location /monitor_device/ {
 	    root /data/web/dist/;
