--- a/nginx.conf
+++ b/nginx.conf
@@ -119,8 +119,14 @@ server {
 
     # XXX: Is it better to put those into /repos?
     location /static/ {
-        root /data/web/dist/;
-        gzip_static on;
+	location /static/help/ {
+	    alias /data/web/help/;
+	    gzip_static on;
+	}
+	location /static/ {
+            root /data/web/dist/;
+            gzip_static on;
+        }
     }
     location /repoconfig/ {
         root /data/web/;
