Simplified the nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,95 +7,6 @@ map $http_origin $status_cors_host {
 	"~http://mirrors.pku.edu.cn" http://mirrors.pku.edu.cn;
 	"~https://mirrorz.org" https://mirrorz.org;
 }
-server {
-    listen	3001;
-    root /data/repos/;
-    location /ubuntu-releases/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /ubuntu-cdimage/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /ubuntu/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /centos/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /manjaro/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /epel/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /archlinux/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /archlinuxarm/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /linuxmint/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /linuxmint-cd/ {
-        autoindex on;
-	autoindex_format json;
-    }
-    location /opensuse/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /anaconda/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /pypi/ {
-        autoindex on;
-	autoindex_format json;
-        alias /data/repos/pypi/web/;
-    }
-    location /gentoo/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /debian/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /debian-cd/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /debian-security/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /debian-multimedia/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /debian-nonfree/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /raspbian/ {
-        autoindex on;
-        autoindex_format json;
-    }
-    location /huggingface/ {
-        autoindex on;
-        autoindex_format json;
-    }
-}
 
 server {
     listen       80;
@@ -110,7 +21,10 @@ server {
     access_log   /var/log/nginx/repos_test_access.log;
 
     root /data/repos/;
-
+    # Warning: don't use this regularly.
+    #location = /config.json {
+    #	root /data/backend-ng/;
+    #}
     location /phpmyadmin/ {
         # proxy_pass http://localhost:3002/;
 	root /data/;
