Update nginx.conf for git-repos

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,10 @@ map $http_origin $status_cors_host {
 }
 
 server {
-    listen       80;
-    listen       [::]:80;
-    listen       443 ssl;
-    listen       [::]:443 ssl;
+    listen       80 default;
+    listen       [::]:80 default;
+    listen       443 ssl default;
+    listen       [::]:443 ssl default;
     server_name  mirrors.pku.edu.cn;
 
     # return 301 https://$server_name$request_uri;
@@ -83,6 +83,16 @@ server {
             error_page 404 /index.html;
             return 404;
 	}
+    }
+
+    location ~ /git-repos(/.*) {
+        fastcgi_pass  unix:/var/run/fcgiwrap.socket;
+        fastcgi_param SCRIPT_FILENAME /usr/libexec/git-core/git-http-backend;
+        fastcgi_param GIT_HTTP_EXPORT_ALL "";
+        fastcgi_param GIT_PROJECT_ROOT /data/repos/git-repos;
+        fastcgi_param PATH_INFO $1;
+        fastcgi_param REMOTE_USER $remote_user;
+        include       fastcgi_params;
     }
 
 # Web router
