--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,31 @@ server {
         root /data/web/;
     }
 
+    location /npm/ {
+        # proxy_set_header content-encoding "";
+        proxy_pass http://registry.npmjs.org/;
+        proxy_set_header Accept-Encoding "";
+        proxy_set_header Host registry.npmjs.org;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        sub_filter_types application/json;
+        sub_filter 'https://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
+	sub_filter 'http://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
+        sub_filter_once off;
+    }
+    location /npm {
+        # proxy_set_header content-encoding "";
+        proxy_pass http://registry.npmjs.org/;
+        proxy_set_header Accept-Encoding "";
+        proxy_set_header Host registry.npmjs.org;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        sub_filter_types application/json;
+        sub_filter 'https://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
+	sub_filter 'http://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
+        sub_filter_once off;
+    }
+    
     location ~ /monitor/(start|stop|log) {
     	try_files @error @error;
     }
@@ -59,6 +84,14 @@ server {
 
     location /files/ {
 	proxy_pass http://localhost:3001/;
+    }
+    location /.well-known/ {
+        # root /data/web/repoconfig/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:12004;
     }
     location = /robots.txt {
         root /data/web/repoconfig/;
@@ -85,7 +118,7 @@ server {
 	}
     }
 
-    location ~ /git-repos(/.*) {
+    location ~ /git-repos(/.+) {
         fastcgi_pass  unix:/var/run/fcgiwrap.socket;
         fastcgi_param SCRIPT_FILENAME /usr/libexec/git-core/git-http-backend;
         fastcgi_param GIT_HTTP_EXPORT_ALL "";
