--- a/nginx.conf
+++ b/nginx.conf
@@ -46,29 +46,37 @@ server {
         root /data/web/;
     }
 
+    # proxy_cache_path  /data/repos/npm/cache levels=1:2 keys_zone=npmcache:100m inactive=24h max_size=100g use_temp_path=off;
     location /npm/ {
-        # proxy_set_header content-encoding "";
         proxy_pass http://registry.npmjs.org/;
         proxy_set_header Accept-Encoding "";
         proxy_set_header Host registry.npmjs.org;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        sub_filter_types application/json;
-        sub_filter 'https://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
-	sub_filter 'http://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
+        proxy_cache            npmcache;
+        proxy_cache_valid      any 1d;
+
+        proxy_buffering on;
+        proxy_ignore_headers Expires;
+        proxy_ignore_headers X-Accel-Expires;
+        proxy_ignore_headers Cache-Control;
+        proxy_ignore_headers Set-Cookie;
+
+        proxy_hide_header X-Accel-Expires;
+        proxy_hide_header Expires;
+        proxy_hide_header Cache-Control;
+        proxy_hide_header Pragma;
+
+        sub_filter_types *;
+        sub_filter https://registry.npmjs.org/ $scheme://$host/npm/;
         sub_filter_once off;
     }
     location /npm {
-        # proxy_set_header content-encoding "";
         proxy_pass http://registry.npmjs.org/;
         proxy_set_header Accept-Encoding "";
         proxy_set_header Host registry.npmjs.org;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        sub_filter_types application/json;
-        sub_filter 'https://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
-	sub_filter 'http://registry.npmjs.org' 'http://mirrors.eecser.com/npm';
-        sub_filter_once off;
     }
     
     location ~ /monitor/(start|stop|log) {
